<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ChangepasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:text="Change your Password"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:textColor="@color/colorlogo"
        android:textSize="26sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorlogo">

        <EditText
            android:id="@+id/etOldPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Old Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorlogo">

        <EditText
            android:id="@+id/etChangePassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="New Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorlogo">

        <EditText
            android:id="@+id/etReChangePassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Confirm New Password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_marginTop="6dp"
        android:id="@+id/btnChangePassword"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="Save"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/textcolor" />

</LinearLayout>