<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorbackground"
    android:theme="@style/AppTheme"
    tools:context=".LoginActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="60dp"
    android:paddingTop="60dp"
    android:background="@color/colorbackground"
    android:orientation="vertical"
    android:theme="@style/AppTheme">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo" />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <EditText
            android:id="@+id/etEmail"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Email" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorlogo">

        <EditText
            android:id="@+id/etPassword"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="325dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="Password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_margin="10dp"
        android:padding="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvForgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forgot password?"
            android:textColor="@color/colorlogo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="Create an account"
            android:textColor="@color/colorlogo"
            android:textSize="18sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:text="Login"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/textcolor" />

</LinearLayout>

</ScrollView>